yay a narrative is starting to come out of the tuning stuff